--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@320&display=swap" rel="stylesheet">
         <body>
             <div class="bio">
-                Design Engineer interested in product manufacturing, engineering simulation and unmanned systems, currently strive to learning about digital industry
+                Design Engineer interested in product manufacturing, engineering simulation and unmanned systems, currently strive to learning about digital industry spesificly in AI/ML, software and data engineering
             </div>
         </body>
     </head>
