--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@320&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/png" href="logo.png">
         <body>
             <div class="bio">
                 Design Engineer interested in product manufacturing, engineering simulation and unmanned systems, currently strive to learning about digital industry spesifically in machine learning, software and data engineering
