--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/png" href="logo.png">
         <body>
             <div class="bio">
-                Engineer interested in design engineering, manufacturing and unmanned systems, currently strive to learning about digital industry spesifically in machine learning, software and data engineering
+                Design Engineer work in medical devices, industrial manufacturing and unmanned systems, currently strive to learning about digital industry spesifically in machine learning, software and data engineering
             </div>
         </body>
     </head>
