--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <link rel="icon" type="image/png" href="logo.png">
         <body>
             <div class="bio">
-                Design Engineer in medical devices, industrial manufacturing and unmanned systems, currently strive to learning about digital industry spesifically in machine learning, software and data engineering
+                Design Engineer in medical devices, industrial manufacturing and unmanned systems.
+                Currently strive to learning about digital industry spesifically in machine learning, 
+                software and data engineering
             </div>
         </body>
     </head>
