--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+g simu<html>
     <head>
         <title>kuro</title>
         <link rel="stylesheet" href="styles.css">
@@ -8,9 +8,9 @@
         <link rel="icon" type="image/png" href="logo.png">
         <body>
             <div class="bio">
-                Design Engineer in medical devices, industrial manufacturing and unmanned systems.
-                Currently strive to learning about digital industry spesifically in machine learning, 
-                software and data engineering
+                Design Engineer in medical devices, industrial manufacturing, engineering simulation
+                and unmanned systems. Currently strive to learning about digital industry spesifically 
+                in machine learning, software and data engineering
             </div>
         </body>
     </head>
