--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+
         <link rel="icon" type="image/png" href="logo.png">
         <body>
             <div class="bio">
-                Design Engineer in medical devices, industrial manufacturing, engineering simulation
-                and unmanned systems. Currently strive to learning about digital industry spesifically 
-                in machine learning, software and data engineering
+                Design Engineer in medical devices, industrial manufacturing, engineering simulation and unmanned systems. Currently strive to learning about digital industry spesifically in machine learning, software and data engineering
             </div>
         </body>
     </head>
