--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="logo.png">
         <body>
             <div class="bio">
-                Design Engineer in medical devices, industrial manufacturing, engineering simulation and unmanned systems. Currently strive to learning about digital industry spesifically in machine learning, software and data engineering
+                Design Engineer in medical devices, industrial manufacturing, engineering simulation and unmanned systems. In spare time, strive to learning about digital industry spesifically in machine learning, software and data engineering
             </div>
         </body>
     </head>
